add_executable(day_1_part_1 day_1_part_1.cpp)
add_executable(day_1_part_2 day_1_part_2.cpp)
add_executable(day_2_part_1 day_2_part_1.cpp)
add_executable(day_2_part_2 day_2_part_2.cpp)
add_executable(day_3_part_1 day_3_part_1.cpp)
add_executable(day_3_part_2 day_3_part_2.cpp)
add_executable(day_4_part_1 day_4_part_1.cpp)
add_executable(day_4_part_2 day_4_part_2.cpp)
add_executable(day_5_part_1 day_5_part_1.cpp)
add_executable(day_5_part_2 day_5_part_2.cpp)
add_executable(day_6_part_1 day_6_part_1.cpp)
add_executable(day_6_part_2 day_6_part_2.cpp)
add_executable(day_7_part_1 day_7_part_1.cpp)
add_executable(day_7_part_2 day_7_part_2.cpp)